--- a/12-combo.html
+++ b/12-combo.html
@@ -10,7 +10,7 @@
             border: 1px solid;
         }
     </style>
-    <script src="https://gw.alipayobjects.com/os/lib/antv/g6/3.8.1/dist/g6.min.js"></script>
+    <script src="./lib/g6.min.js"></script>
 </head>
 
 <body>
