--- a/13-combo-连线.html
+++ b/13-combo-连线.html
@@ -12,7 +12,7 @@
             height: 500px;
         }
     </style>
-    <script src="https://gw.alipayobjects.com/os/lib/antv/g6/3.8.1/dist/g6.min.js"></script>
+    <script src="./lib/g6.min.js"></script>
 </head>
 
 <body>
