--- a/15-组织架构-2.html
+++ b/15-组织架构-2.html
@@ -49,7 +49,7 @@
             overflow: hidden;
         }
     </style>
-    <script src="https://gw.alipayobjects.com/os/lib/antv/g6/3.8.1/dist/g6.min.js"></script>
+    <script src="./lib/g6.min.js"></script>
 </head>
 
 <body>
