--- a/18-自定义事件.html
+++ b/18-自定义事件.html
@@ -75,7 +75,7 @@
             color: red;
         }
     </style>
-    <script src="https://gw.alipayobjects.com/os/lib/antv/g6/3.8.1/dist/g6.min.js"></script>
+    <script src="./lib/g6.min.js"></script>
 </head>
 
 <body>
