--- a/23-layout-radial.html
+++ b/23-layout-radial.html
@@ -20,6 +20,21 @@
     <script>
         const data = {
             nodes: [
+                // {
+                //     id: 'Rex',
+                //     label: '80+',
+                //     size: 80,
+                //     style: {
+                //         fill: '#86889D',
+                //         lineWidth: 0,
+                //     },
+                //     labelCfg: {
+                //         style: {
+                //             fontSize: 12,
+                //             fill: '#ffffff',
+                //         },
+                //     },
+                // },
                 {
                     id: '0',
                     label: '10+',
