--- a/03-前言/03-前言.html
+++ b/03-前言/03-前言.html
@@ -9,7 +9,7 @@
 
 <body>
     <div id="mountNode"></div>
-    <script src="https://gw.alipayobjects.com/os/antv/pkg/_antv.g6-3.7.0/dist/g6.min.js"></script>
+    <script src="../lib/g6.min.js"></script>
     <script src="./03-前言.js"></script>
 </body>
 
